--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # Supabase Configuration
-VITE_SUPABASE_PROJECT_ID="your-project-id"
+VITE_SUPABASE_PROJECT_ID="okccpglgyhnjmgbjrjkb"
 VITE_SUPABASE_PUBLISHABLE_KEY="your-publishable-key"
 VITE_SUPABASE_URL="https://your-project-id.supabase.co"
 
